{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 833,
  "lineage": "9bc092bc-a7c9-b418-ac10-5dbdcaf609fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "myalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:loadbalancer/app/finalProject-alb/bc9951aa0fe2220a",
            "arn_suffix": "app/finalProject-alb/bc9951aa0fe2220a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "finalProject-alb-1315865822.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:loadbalancer/app/finalProject-alb/bc9951aa0fe2220a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "finalProject-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-071c1285baed222d3",
              "sg-08d843962151f5224"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a24278a245debde"
              },
              {
                "subnet_id": "subnet-0d2153f99c69c7a7f"
              },
              {
                "subnet_id": "subnet-0e7da16eb23a13207"
              }
            ],
            "subnets": [
              "subnet-01a24278a245debde",
              "subnet-0d2153f99c69c7a7f",
              "subnet-0e7da16eb23a13207"
            ],
            "vpc_id": "vpc-046f635082074fba4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.internal",
            "aws_security_group.web_server_lb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:listener/app/finalProject-alb/bc9951aa0fe2220a/56447d580c90c5c5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:targetgroup/frontend1/7b24b3be1a046326",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:listener/app/finalProject-alb/bc9951aa0fe2220a/56447d580c90c5c5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:loadbalancer/app/finalProject-alb/bc9951aa0fe2220a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.myalb",
            "aws_lb_target_group.frontend1",
            "aws_security_group.internal",
            "aws_security_group.web_server_lb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:targetgroup/backend1/295918e570e5590d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:listener-rule/app/finalProject-alb/bc9951aa0fe2220a/56447d580c90c5c5/f5e6abbe44ca1b60",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/jokes/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:listener-rule/app/finalProject-alb/bc9951aa0fe2220a/56447d580c90c5c5/f5e6abbe44ca1b60",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:listener/app/finalProject-alb/bc9951aa0fe2220a/56447d580c90c5c5",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.myalb",
            "aws_lb_listener.http",
            "aws_lb_target_group.backend1",
            "aws_lb_target_group.frontend1",
            "aws_security_group.internal",
            "aws_security_group.web_server_lb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:targetgroup/backend1/295918e570e5590d",
            "arn_suffix": "targetgroup/backend1/295918e570e5590d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 6,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:targetgroup/backend1/295918e570e5590d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend1",
            "port": 3010,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "backend1-target-group"
            },
            "tags_all": {
              "Name": "backend1-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-046f635082074fba4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:targetgroup/frontend1/7b24b3be1a046326",
            "arn_suffix": "targetgroup/frontend1/7b24b3be1a046326",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 6,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:851725162832:targetgroup/frontend1/7b24b3be1a046326",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend1",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "frontend1-target-group"
            },
            "tags_all": {
              "Name": "frontend1-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-046f635082074fba4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725162832:security-group/sg-08d843962151f5224",
            "description": "Allow traffic between LB and servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d843962151f5224",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "web-server-internal-sg",
            "name_prefix": "",
            "owner_id": "851725162832",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-internal-sg"
            },
            "tags_all": {
              "Name": "web-server-internal-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-046f635082074fba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725162832:security-group/sg-071c1285baed222d3",
            "description": "Allow HTTP access from the world",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071c1285baed222d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-server-lb-sg",
            "name_prefix": "",
            "owner_id": "851725162832",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-lb-sg"
            },
            "tags_all": {
              "Name": "web-server-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-046f635082074fba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725162832:security-group/sg-04e8db7fe8d2a8240",
            "description": "Allow SSH access from the world",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e8db7fe8d2a8240",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-servers-sg",
            "name_prefix": "",
            "owner_id": "851725162832",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-servers-sg"
            },
            "tags_all": {
              "Name": "web-servers-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-046f635082074fba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725162832:network-acl/acl-02701948ea1e7a695",
            "default_network_acl_id": "acl-02701948ea1e7a695",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02701948ea1e7a695",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "851725162832",
            "subnet_ids": [
              "subnet-01a24278a245debde",
              "subnet-0d2153f99c69c7a7f",
              "subnet-0e7da16eb23a13207"
            ],
            "tags": {
              "Name": "finalProject-cloud-default",
              "project": "colman"
            },
            "tags_all": {
              "Name": "finalProject-cloud-default",
              "project": "colman"
            },
            "vpc_id": "vpc-046f635082074fba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725162832:route-table/rtb-0e2927fd683dfef8e",
            "default_route_table_id": "rtb-0e2927fd683dfef8e",
            "id": "rtb-0e2927fd683dfef8e",
            "owner_id": "851725162832",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "finalProject-cloud-default",
              "project": "colman"
            },
            "tags_all": {
              "Name": "finalProject-cloud-default",
              "project": "colman"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-046f635082074fba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725162832:security-group/sg-07f53d6c4584d5390",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07f53d6c4584d5390",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "851725162832",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "finalProject-cloud-default",
              "project": "colman"
            },
            "tags_all": {
              "Name": "finalProject-cloud-default",
              "project": "colman"
            },
            "vpc_id": "vpc-046f635082074fba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725162832:internet-gateway/igw-0ea81adddd4ad56b7",
            "id": "igw-0ea81adddd4ad56b7",
            "owner_id": "851725162832",
            "tags": {
              "Name": "finalProject-cloud",
              "project": "colman"
            },
            "tags_all": {
              "Name": "finalProject-cloud",
              "project": "colman"
            },
            "vpc_id": "vpc-046f635082074fba4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ea81adddd4ad56b7",
            "id": "r-rtb-0b791540d9ed106fd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b791540d9ed106fd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725162832:route-table/rtb-0b791540d9ed106fd",
            "id": "rtb-0b791540d9ed106fd",
            "owner_id": "851725162832",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "finalProject-cloud-public",
              "project": "colman"
            },
            "tags_all": {
              "Name": "finalProject-cloud-public",
              "project": "colman"
            },
            "timeouts": null,
            "vpc_id": "vpc-046f635082074fba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0172ab4e095193ba7",
            "route_table_id": "rtb-0b791540d9ed106fd",
            "subnet_id": "subnet-0d2153f99c69c7a7f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fefc08e770b543ad",
            "route_table_id": "rtb-0b791540d9ed106fd",
            "subnet_id": "subnet-01a24278a245debde"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0705f713cf90f3c4f",
            "route_table_id": "rtb-0b791540d9ed106fd",
            "subnet_id": "subnet-0e7da16eb23a13207"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725162832:subnet/subnet-0d2153f99c69c7a7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "20.10.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2153f99c69c7a7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725162832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "finalProject-cloud-public-eu-central-1a",
              "project": "colman"
            },
            "tags_all": {
              "Name": "finalProject-cloud-public-eu-central-1a",
              "project": "colman"
            },
            "vpc_id": "vpc-046f635082074fba4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725162832:subnet/subnet-01a24278a245debde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "20.10.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a24278a245debde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725162832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "finalProject-cloud-public-eu-central-1b",
              "project": "colman"
            },
            "tags_all": {
              "Name": "finalProject-cloud-public-eu-central-1b",
              "project": "colman"
            },
            "vpc_id": "vpc-046f635082074fba4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725162832:subnet/subnet-0e7da16eb23a13207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "20.10.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7da16eb23a13207",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725162832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "finalProject-cloud-public-eu-central-1c",
              "project": "colman"
            },
            "tags_all": {
              "Name": "finalProject-cloud-public-eu-central-1c",
              "project": "colman"
            },
            "vpc_id": "vpc-046f635082074fba4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725162832:vpc/vpc-046f635082074fba4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.10.0.0/16",
            "default_network_acl_id": "acl-02701948ea1e7a695",
            "default_route_table_id": "rtb-0e2927fd683dfef8e",
            "default_security_group_id": "sg-07f53d6c4584d5390",
            "dhcp_options_id": "dopt-0e3935435a80cbdc3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046f635082074fba4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e2927fd683dfef8e",
            "owner_id": "851725162832",
            "tags": {
              "Name": "finalProject-cloud",
              "project": "colman"
            },
            "tags_all": {
              "Name": "finalProject-cloud",
              "project": "colman"
            }
          }
        }
      ]
    }
  ]
}